--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -397,7 +397,7 @@ jQuery(document).ready(function() {
 	}
 	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
 	$("#sbx_trnsprtAreaCd").selectpicker("hide"); //운송지역코드 숨기기
-	if(result.dealInfo.buyPaymntSttsCd == "1PW"){ //1차 결제 미완료면
+	if(result.dealInfo.buyPaymntSttsCd == "1PW" && result.dealInfo.dealSttsCd == "TC"){ //1차 결제 미완료면
 		$("#dealSttsCdDetail").text("구매자 1차 결제를 대기중입니다.");
 		$("#dealSttsCdDetail").append("<span>1차 결제 대기</span>"); 
 		$("#1PW").css("display", ""); //1차 결제 div
@@ -408,7 +408,7 @@ jQuery(document).ready(function() {
 		amount = parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')); //작품가를 정수형으로 가져온다
 		getCouponList("DD"); //거래 수수료 할인 쿠폰 목록 가져오기
 	}
-	if(result.dealInfo.buyPaymntSttsCd == "2PW"){ //2차 결제 미완료면
+	if(result.dealInfo.buyPaymntSttsCd == "2PW" && result.dealInfo.dealSttsCd == "TC"){ //2차 결제 미완료면
 		$("#dealSttsCdDetail").text("구매자 2차 결제를 대기중입니다.");
 		$("#dealSttsCdDetail").append("<span>2차 결제 대기</span>"); 
 		$("#2PW").css("display", ""); //2차 결제 div
@@ -416,7 +416,7 @@ jQuery(document).ready(function() {
 		$("#btn_payment").css("display", "");
 		getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
 	}
-	if(result.dealInfo.buyPaymntSttsCd == "2PC"){ //2차 결제 완료면
+	if(result.dealInfo.buyPaymntSttsCd == "2PC" && result.dealInfo.dealSttsCd == "TC"){ //2차 결제 완료면
 		$("#dealSttsCdDetail").text("구매자 2차 결제가 완료되었습니다.");
 		$("#dealSttsCdDetail").append("<span>2차 결제 완료</span>"); 
 		$("#2PC").css("display", ""); //2차 결제 완료 div
