--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -286,7 +286,7 @@ function myDealSearchList(){
 	    				myDealListHtml += '				<dd>'+ myDealList[i].dealStrtDate +' – '+ myDealList[i].dealEndngDate +'</dd>';
 	    				myDealListHtml += '				<dt>시작가</dt>';
 	    				myDealListHtml += '				<dd>'+ myDealList[i].dealStrtPrc +' 원</dd>';
-	    				if(myDealList[i].dealSttsCd == "TP"){ //경매 진행중이면
+	    				if(myDealList[i].dealSttsCd == "TP" && $("input:radio[name='buyOrSell']:checked").val() == "BUY"){ //경매 진행중이면
 	    					myDealListHtml += '			<dt>현재 입찰가</dt>';
 	    					myDealListHtml += '			<dd>'+ myDealList[i].maxBidPrc +' 원</dd>';
 		    				myDealListHtml += '			<dt>응찰가</dt>';
@@ -298,6 +298,12 @@ function myDealSearchList(){
 		    				myDealListHtml += '					<button type="button" dealSq="'+myDealList[i].dealSq+'" onclick="bidReg(this)">응찰하기</button>';
 		    				myDealListHtml += '				</div>';
 		    				myDealListHtml += '			</dd>';
+		    				myDealListHtml += '			<dt>남은 시간</dt>';
+		    				myDealListHtml += '			<dd class="dealCount" date="'+myDealList[i].dealEndngDateTime+'"></dd>';
+	    				}
+	    				if(myDealList[i].dealSttsCd == "TP" && myDealList[i].sellMbrSq == sMbrSqVal){ //경매 진행중이며 판매자면
+	    					myDealListHtml += '			<dt>현재 입찰가</dt>';
+	    					myDealListHtml += '			<dd>'+ myDealList[i].maxBidPrc +' 원</dd>';
 		    				myDealListHtml += '			<dt>남은 시간</dt>';
 		    				myDealListHtml += '			<dd class="dealCount" date="'+myDealList[i].dealEndngDateTime+'"></dd>';
 	    				}
@@ -338,35 +344,39 @@ function myDealSearchList(){
     				myDealListHtml += '			<div class="myd-won">';
     				if(myDealList[i].dealTypCd == "A"){ //경매면
     					myDealListHtml += '				<p class="won-p">';
-    					if(myDealList[i].bidMbrSq == sMbrSqVal && myDealList[i].dealSttsCd == "TP"){ //가장 높은 입찰자면서 거래중이면
+    					if(myDealList[i].bidMbrSq == sMbrSqVal && myDealList[i].dealSttsCd == "TP" && $("input:radio[name='buyOrSell']:checked").val() == "BUY"){ //가장 높은 입찰자면서 거래중이면
 	    					myDealListHtml += '					현재 가장 높은 입찰가로 입찰 중 입니다.';
 	    					myDealListHtml += '					<span>경매 진행 중</span>';
     					}
-    					if(myDealList[i].bidMbrSq == sMbrSqVal && myDealList[i].dealSttsCd == "TP"){//거래중이며 가장 높은 입찰가가 아니면
+    					if(myDealList[i].bidMbrSq != sMbrSqVal && myDealList[i].dealSttsCd == "TP" && $("input:radio[name='buyOrSell']:checked").val() == "BUY"){//거래중이며 가장 높은 입찰가가 아니면
     						myDealListHtml += '					현재 회원님보다 높은 입찰가가 있습니다.';
     						myDealListHtml += '					<span>경매 진행 중</span>';
     					}
+    					if(myDealList[i].dealSttsCd == "TP" && $("input:radio[name='buyOrSell']:checked").val() == "SELL"){//경매 거래중이며 판매자면
+    						myDealListHtml += '					현재 회원님의 작품이 경매 진행중입니다.';
+    						myDealListHtml += '					<span>경매 진행 중</span>';
+    					}
     					
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "1PW"){ //낙찰자이면서 1차 결제 대기 상태면
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "1PW" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 1차 결제 대기 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>1차 결제를 진행해 주세요.';
 	    					myDealListHtml += '					<span>1차 결제 대기</span>';
 	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
 	    				}
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PW"){ //낙찰자이면서 2차 결제 대기 상태면
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 2차 결제 대기 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>2차 결제를 진행해 주세요.';
 	    					myDealListHtml += '					<span>2차 결제 대기</span>';
 	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
 	    				}
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC"){ //낙찰자이면서 2차 결제 완료 상태면
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>2차 결제가 완료되었습니다.';
 	    					myDealListHtml += '					<span>2차 결제 완료</span>';
 	    				}
-	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW"){ //판매자이면서 2차 결제 완료 상태면
+	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){ //판매자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>판매자 결제를 진행해주세요.';
 	    					myDealListHtml += '					<span>결제 대기</span>';
 	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
 	    				}
-	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC"){ //판매자이면서 2차 결제 완료 상태면
+	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){ //판매자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>판매자 결제가 완료되었습니다.';
 	    					myDealListHtml += '					<span>결제 완료</span>';
 	    				}
@@ -374,25 +384,29 @@ function myDealSearchList(){
     				}
     				if(myDealList[i].dealTypCd == "S"){
 	    				myDealListHtml += '				<p class="won-p">';
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "1PC"){
+	    				if(myDealList[i].sellMbrSq != sMbrSqVal && myDealList[i].dealSttsCd == "TP"){//정찰가 거래중이며 판매자면
+    						myDealListHtml += '					현재 회원님의 작품이 판매중입니다.';
+    						myDealListHtml += '					<span>판매 중</span>';
+    					}
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "1PC" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					현재 구매자 1차 결제가 완료되었습니다.';
 		    				myDealListHtml += '					<span>1차 결제 완료</span>';
 	    				}
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal &&myDealList[i].buyPaymntSttsCd == "2PW"){
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal &&myDealList[i].buyPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					구매자 2차 결제 대기중입니다.';
 		    				myDealListHtml += '					<span>2차 결제 대기</span>';
 		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
 	    				}
-	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC"){
+	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					구매자 2차 결제가 완료되었습니다.';
 		    				myDealListHtml += '					<span>2차 결제 완료</span>';
 	    				}
-	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW"){
+	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					판매자 결제를 대기중입니다.';
 		    				myDealListHtml += '					<span>결제 대기</span>';
 		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
 	    				}
-	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC"){
+	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					판매자 결제가 완료되었습니다.';
 		    				myDealListHtml += '					<span>결제 완료</span>';
 	    				}
@@ -441,7 +455,6 @@ setInterval(function() {
 
 //거래 계약 안내 및 상세 페이지로 이동
 function myDealDetail(obj){
-	debugger;
 	var dealSq = obj.getAttribute("dealSq");
 	var checked = $("input:radio[name='buyOrSell']:checked").val();
 	if(checked == "BUY"){
@@ -572,7 +585,7 @@ function bidReg(obj){
 		        	modalAlertShow("실시간 응찰가보다 낮습니다. 응찰 금액을 다시 입력해주세요.", "reload");
 	        	}
 	        	if(data.result == 2){
-	        		modalAlertShow("응찰이 완료되었습니다.");
+	        		modalAlertShow("응찰이 완료되었습니다.", "reload");
 	        	}
 	        },
 	        error: function(error) {
